salvando alteraçoes (index.html)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barreto Construções e Avaliações</title>
-    <link rel="stylesheet" href="./main.css">
+    <link rel="Stylesheet" href="./main.css">
 </head>
 <body>
     <header>
@@ -25,7 +25,7 @@
     </header>
     <section id="about">
         <div class="container">
-            <img class="Barreto1" src=".imagens/logobarreto.png"alt="Barreto"/>
+            <img class="store-front" src="./imagens/logobarreto.png"alt="Barreto"/>
             <div>
                 <h2>Sobre a Barreto</h2>
                 <p>
@@ -78,6 +78,12 @@
             </p>
         </div>
     </section>
-
+    <footer>
+        <div class="container">
+            <p>
+                &copy; Barreto Construções e Avaliações - Todos os direitos reservados - 2023
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
