salvando alterações (index.html)

--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#about">Sobre a Barreto</a>
+                        <a href="#about">Home</a>
                     </li>
                     <li>
-                        <a href="#contact">contato</a>
+                        <a href="#actuacion">ATUAÇÃO</a>
+                    </li>
+                    <li>
+                        <a href="#time">NOSSO TIME</a>
+                    </li>
+                    <li>
+                        <a href="#contact">FALE CONOSCO</a>
                     </li>
                 </ul>
             </nav>
@@ -33,10 +39,23 @@
             <div>
                 <h2>Sobre a Barreto</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab obcaecati quisquam et natus, nostrum quidem pariatur molestiae accusantium harum itaque, iste quos, numquam voluptatem esse non cumque cum reiciendis id.
+                    Avaliação de Bens Imóveis, Frutos e Direitos, custos ou indicadores de viabilidade econômica, para um determinado objetivo, finalidade e data, consideradas premissas do mercado e normas vigentes, ressalvas e condições (ABNT NBR 14653 e suas partes).
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut deleniti, maiores, incidunt necessitatibus culpa possimus ipsa expedita architecto iure consequuntur cumque? Illum unde fuga esse veniam assumenda! Eveniet, delectus necessitatibus.
+                    Procedimentos técnicos  com base e fundamentos nas normas da ABNT, avaliação de:
+                <p>
+                    Imóveis urbanos
+                </p>
+                <p>
+                    Imóveis rurais
+                </p>
+                <p>
+                    Máquinas e equipamentos
+                </p>
+                <p>
+                    Empreendimentos de base imobiliária
+                </p>
+                Estudos de viabilidade mercadológica e de risco de empreendimentos, análise de portfólios imobiliários e estudos de grande abrangência envolvendo análise de valores e impactos mercadológicos também fazem parte do leque de produção.
                 </p>
             </div>
         </div>
