salvando alterações (index.html)

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 </p>
                 <p>
                     Empreendimentos de base imobiliária
+                    Consultoria Empresarial
                 </p>
                 Estudos de viabilidade mercadológica e de risco de empreendimentos, análise de portfólios imobiliários e estudos de grande abrangência envolvendo análise de valores e impactos mercadológicos também fazem parte do leque de produção.
                 </p>
