sanvando alterações (index.html)

--- a/index.html
+++ b/index.html
@@ -54,10 +54,13 @@
                 </p>
                 <p>
                     Empreendimentos de base imobiliária
+                </p>
+                <p>
                     Consultoria Empresarial
                 </p>
                 Estudos de viabilidade mercadológica e de risco de empreendimentos, análise de portfólios imobiliários e estudos de grande abrangência envolvendo análise de valores e impactos mercadológicos também fazem parte do leque de produção.
                 </p>
+                
             </div>
         </div>
     </section>
@@ -75,35 +78,56 @@
                         <button type="submit">Enviar</button>
                     </form>
                 </div>
-                <div>
-                    <h3>Nos acompanhe</h3>
-            <ul class="social-links">
-                <li>
-                    <a href="#"title="Siga-nos no Instagram">
-                        <img src="./imagens/instagram.jpg"alt="Logo do instagram" />
-                    </a>
-                </li>
-                <li>
-                    <a href="#"title="Siga-nos no facebook">
-                        <img src="./imagens/facebook.png"alt="Logo do facebook" />
-                    </a>
-                </li>
-                <li>
-                    <a href="#"title="Visite nosso canal no youtube">
-                        <img src="./imagens/youtube.jpg"alt="Logo do youtube" />
-                    </a>
-                </li>
-            </ul>
-                </div>
-                <div>
-            <h3>Venha até nós</h3>
-            <p>
-                Rua Professora Olindina nº 416, Antares - Maceió - AL
-            </p>
-            </div>
         </div>
         </div>
     </section>
+    <footer>
+        <section>
+            <div class="container">
+                <div>
+                    <p>
+                        Rua Professora Olindina nº 416
+                    </p>
+                    <p>
+                        Antares - Maceió - AL
+                    </p>
+                </div>
+                <div>
+                    <p>
+                        Tel: +55 (82) 99601-1277 | 98804-3202
+                    </p>
+                    <p>
+                        barretoavaengenharia@gmail.com
+                    </p>
+                </div>
+                <div>
+                    <h3>Nos acompanhe</h3>
+                <ul class="social-links">
+                    <li>
+                        <a href="#"title="Siga-nos no Instagram">
+                            <img src="./imagens/instagram.jpg"alt="Logo do instagram" />
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"title="Siga-nos no facebook">
+                            <img src="./imagens/facebook.png"alt="Logo do facebook" />
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"title="Visite nosso canal no youtube">
+                            <img src="./imagens/youtube.jpg"alt="Logo do youtube" />
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"title="Contate-nos no whatssap">
+                            <img src="./imagens/whatssap.jpg"alt="Logo do whatssap" />
+                        </a>
+                    </li>
+                </ul>
+                </div>
+            </div>
+        </section>
+    </footer>
     <footer>
         <div class="container">
             <p>
