salvando alterações (index.html)

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div>
                 <h2>Sobre a Barreto</h2>
                 <p>
-                    Avaliação de Bens Imóveis, Frutos e Direitos, custos ou indicadores de viabilidade econômica, para um determinado objetivo, finalidade e data, consideradas premissas do mercado e normas vigentes, ressalvas e condições (ABNT NBR 14653 e suas partes).
+                    Avaliação de Bens Imóveis, Frutos e Direitos, custos ou indicadores de viabilidade econômica, para um determinado objetivo, finalidade e data, consideradas premissas do mercado e normas vigentes, ressalvas e condições (ABNT NBR 14653 e suas partes). Com comprometimento ética, responsabilidade e qualidade nos serviços oferecidos a  nossos clientes.
                 </p>
                 <p>
                     Procedimentos técnicos  com base e fundamentos nas normas da ABNT, avaliação de:
@@ -131,7 +131,7 @@
     <footer>
         <div class="container">
             <p>
-                &copy; Barreto Construções e Avaliações - Todos os direitos reservados - 2023
+                &copy; Barreto Construções e Avaliações - Todos os direitos reservados - 2022
             </p>
         </div>
     </footer>
