salvando alterações( index.html)

--- a/index.html
+++ b/index.html
@@ -64,6 +64,36 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="container">
+            <imag clas="store-front" src="./imagens/capacete.png" alt="Barreto"/>
+            <div>
+                <h2>Atuação na área de segurança</h2>
+                <p>
+                    Perícias
+                </p>
+                <p>
+                    Consultoria
+                </p>
+                <p>
+                    Programa de prevenção de riscos ambientais (PPRA)
+                </p>
+                <p>
+                    Laudo NR-12 - Análise de Risco de Máquinas
+                </p>
+            </div>
+        </div>
+    </section id="about">
+    <div class="container">
+        <img class="store-front" src="./imagens/ENGENHEIRO.jpg"alt="Barreto"/>
+        <div>
+            <h2>PROCEDIMENTOS TÉCNICOS DE ENTREGA E RECEBIMEMTO DE OBRAS</h2>
+            <p>
+                Assessoramento a construtores, incorporadores e contratantes de serviços de obras de engenharia nos procedimentos de entrega e recebimento com o propósito de verificar o cumprimento de obrigações contratuais e também de propiciar correções e ajustes de eventuais anomalias construtivas e inconformidades.
+            </p>
+        </div>
+    </div>
+</section>
     <section id="contact">
         <div class="container">
             <h2>contato</h2>
